Acabada la ISSUE propuesta de avatar en los endpoints de friendship
